--- a/portfolio.html
+++ b/portfolio.html
@@ -359,7 +359,7 @@
               <form action="">
                 <input type="email" placeholder="Enter your email">
                 <button type="submit">
-                  Subscribe
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, molestias.
                 </button>
               </form>
             </div>
